# cima_dot_com_api

./: .env-example  Dockerfile  README.md  hello.py  pyproject.toml  requirements.txt
app/: api.py  cache.py  main.py  models.py  normalizer.py  scraper.py  settings.py
